added learning rate

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -75,6 +75,7 @@
     "    # Training parameters\n",
     "    epochs = params['num_epochs']\n",
     "    batch_size = params['batch_size']\n",
+    "    learning_rate = params['learning_rate']\n",
     "\n",
     "    # Dataset Path\n",
     "    image_paths = MURA.MURA_DATASET()\n",
@@ -133,7 +134,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "if __name__ == \"__main__\":\n",
     "\n",
     "    #for either VAE or UPAE\n",
@@ -144,7 +144,7 @@
     "    #preprocessing and augmentation\n",
     "    # image_datasets = data_preparation()\n",
     "    \n",
-    "    optimizer = keras.optimizers.Adam(learning_rate=0.0005)\n",
+    "    optimizer = keras.optimizers.Adam(learning_rate=learning_rate)\n",
     "    \n",
     "    if opt.u is False:\n",
     "        model = VAE(opt.u, input_shape, multiplier, latent_size)\n",
@@ -159,7 +159,6 @@
     "\n",
     "    # plot_model(model, 'autoencoder_compress.png', show_shapes=True)\n",
     "    #training on training set.\n",
-    "    # image_datasets['train'] = image_datasets['train'].astype('float32') / 255.\n",
     "    history_train = model.fit(image_datasets['train'], \n",
     "                epochs=epochs, \n",
     "                batch_size=batch_size)\n",
