add additional parameter; add SaveImageCallback

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -29,7 +29,7 @@
     "import cv2\n",
     "import image_manipulation\n",
     "from multiprocessing import Pool\n",
-    "from models import VAE, UPAE, SaveImageCallback\n",
+    "from models import *\n",
     "import numpy as np\n",
     "import glob\n",
     "import matplotlib.pyplot as plt\n",
@@ -76,6 +76,8 @@
     "try:\n",
     "    params = json.load(open(model_file_path + '/parameters.json'))\n",
     "\n",
+    "    # Model to use\n",
+    "    model_is_VAE = params['is_VAE']\n",
     "    # Model parameters\n",
     "    multiplier = params['multiplier']\n",
     "    latent_size = params['latent_size']\n",
@@ -127,27 +129,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "128538d2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(64, 64, 3)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image_datasets['train'][0].shape"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "f69e69d0",
@@ -159,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f906dcd1",
    "metadata": {},
    "outputs": [
@@ -230,54 +211,52 @@
       "                                                                 \n",
       " encoder (Sequential)        (None, 4, 4, 256)         1710528   \n",
       "                                                                 \n",
-      " latent_space_representation  (None, 16, 16, 256)      143201408 \n",
+      " latent_space_representation  (None, 16, 16, 256)      142939200 \n",
       "  (Sequential)                                                   \n",
       "                                                                 \n",
       " decoder (Sequential)        (None, 64, 64, 3)         1709251   \n",
       "                                                                 \n",
-      " z_mean (Dense)              multiple                  16448     \n",
+      " z_mean (Dense)              multiple                  12        \n",
       "                                                                 \n",
-      " z_log_var (Dense)           multiple                  16448     \n",
+      " z_log_var (Dense)           multiple                  12        \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 146,654,083\n",
-      "Trainable params: 146,651,267\n",
+      "Total params: 146,359,003\n",
+      "Trainable params: 146,356,187\n",
       "Non-trainable params: 2,816\n",
       "_________________________________________________________________\n",
       "Epoch 1/5\n",
-      "Vanilla Loss\n",
-      "WARNING:tensorflow:Gradients do not exist for variables ['z_mean/kernel:0', 'z_mean/bias:0', 'z_log_var/kernel:0', 'z_log_var/bias:0'] when minimizing the loss. If you're using `model.compile()`, did you forget to provide a `loss` argument?\n",
-      "Vanilla Loss\n",
-      "WARNING:tensorflow:Gradients do not exist for variables ['z_mean/kernel:0', 'z_mean/bias:0', 'z_log_var/kernel:0', 'z_log_var/bias:0'] when minimizing the loss. If you're using `model.compile()`, did you forget to provide a `loss` argument?\n",
-      "193/193 [==============================] - 20s 77ms/step - mse_loss: 2238.2183 - reconstruction_loss: -3236043.5000 - kl_loss: inf\n",
+      "UPAE Training\n",
+      "UPAE Training\n",
+      "  6/164 [>.............................] - ETA: 10s - mse_loss: : 7739.7935 - total_loss: : 7755.5920 - loss1: : 7755.5931 - loss2: : -0.0010 - binary_crossentropy: : 3284464.5833 - accuracy: : 0.0391WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0200s vs `on_train_batch_end` time: 0.0388s). Check your callbacks.\n",
+      "164/164 [==============================] - ETA: 0s - mse_loss: : 6962.1391 - total_loss: : 6829.7329 - loss1: : 6829.7134 - loss2: : 0.0195 - binary_crossentropy: : 3806317.7332 - accuracy: : 0.0514UPAE Validation\n",
+      "UPAE Loss\n",
+      "6171\n",
+      "164/164 [==============================] - 19s 89ms/step - mse_loss: : 6962.5378 - total_loss: : 6829.2760 - loss1: : 6829.2564 - loss2: : 0.0197 - binary_crossentropy: : 3806849.1485 - accuracy: : 0.0514 - val_total_loss: : 5709.5728 - val_loss1: : 5709.4917 - val_loss2: : 0.0801 - val_binary_crossentropy: : 3617076.2500 - val_accuracy: : 0.0522\n",
       "Epoch 2/5\n",
-      "193/193 [==============================] - 15s 76ms/step - mse_loss: 771.8772 - reconstruction_loss: -3756667.7500 - kl_loss: inf\n",
+      "164/164 [==============================] - ETA: 0s - mse_loss: : 6969.3561 - total_loss: : 6309.8657 - loss1: : 6309.7663 - loss2: : 0.0995 - binary_crossentropy: : 3883881.6707 - accuracy: : 0.05416171\n",
+      "164/164 [==============================] - 13s 78ms/step - mse_loss: : 6969.6518 - total_loss: : 6309.4070 - loss1: : 6309.3075 - loss2: : 0.0996 - binary_crossentropy: : 3884033.5076 - accuracy: : 0.0541 - val_total_loss: : 5279.3643 - val_loss1: : 5279.2070 - val_loss2: : 0.1570 - val_binary_crossentropy: : 3617076.2500 - val_accuracy: : 0.0522\n",
       "Epoch 3/5\n",
-      "193/193 [==============================] - 15s 80ms/step - mse_loss: 573.4001 - reconstruction_loss: -3748895.2500 - kl_loss: inf\n",
+      "164/164 [==============================] - ETA: 0s - mse_loss: : 6977.2413 - total_loss: : 5855.2773 - loss1: : 5855.1023 - loss2: : 0.1755 - binary_crossentropy: : 3902721.4345 - accuracy: : 0.05306171\n",
+      "164/164 [==============================] - 13s 79ms/step - mse_loss: : 6977.4323 - total_loss: : 5854.7900 - loss1: : 5854.6148 - loss2: : 0.1756 - binary_crossentropy: : 3902761.1864 - accuracy: : 0.0530 - val_total_loss: : 4896.7427 - val_loss1: : 4896.5117 - val_loss2: : 0.2309 - val_binary_crossentropy: : 3617076.2500 - val_accuracy: : 0.0522\n",
       "Epoch 4/5\n",
-      "193/193 [==============================] - 17s 87ms/step - mse_loss: 474.5878 - reconstruction_loss: -3744997.5000 - kl_loss: inf\n",
+      "164/164 [==============================] - ETA: 0s - mse_loss: : 6863.8188 - total_loss: : 5350.8516 - loss1: : 5350.6018 - loss2: : 0.2488 - binary_crossentropy: : 3865936.9954 - accuracy: : 0.05476171\n",
+      "164/164 [==============================] - 14s 83ms/step - mse_loss: : 6864.6423 - total_loss: : 5350.9165 - loss1: : 5350.6666 - loss2: : 0.2489 - binary_crossentropy: : 3866198.2045 - accuracy: : 0.0546 - val_total_loss: : 4551.1826 - val_loss1: : 4550.8799 - val_loss2: : 0.3027 - val_binary_crossentropy: : 3617076.2500 - val_accuracy: : 0.0522\n",
       "Epoch 5/5\n",
-      "193/193 [==============================] - 14s 73ms/step - mse_loss: 446.2208 - reconstruction_loss: -3745615.0000 - kl_loss: inf\n"
+      "164/164 [==============================] - ETA: 0s - mse_loss: : 7095.8219 - total_loss: : 5151.6909 - loss1: : 5151.3700 - loss2: : 0.3205 - binary_crossentropy: : 3946262.1311 - accuracy: : 0.05286171\n",
+      "164/164 [==============================] - 15s 90ms/step - mse_loss: : 7095.1862 - total_loss: : 5150.7117 - loss1: : 5150.3906 - loss2: : 0.3206 - binary_crossentropy: : 3946036.4000 - accuracy: : 0.0528 - val_total_loss: : 4240.1167 - val_loss1: : 4239.7441 - val_loss2: : 0.3723 - val_binary_crossentropy: : 3617076.2500 - val_accuracy: : 0.0522\n"
      ]
     }
    ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "\n",
-    "    #for either VAE or UPAE\n",
-    "    parser = ArgumentParser()\n",
-    "    parser.add_argument('--u', dest='u', action='store_true') # use uncertainty\n",
-    "    opt, unknown = parser.parse_known_args()\n",
+    "    if model_is_VAE:\n",
+    "        model = VAE(False, input_shape, multiplier, latent_size)\n",
+    "    else:\n",
+    "        model = UPAE(True, input_shape, multiplier, latent_size)\n",
     "\n",
-    "    #preprocessing and augmentation\n",
-    "    # image_datasets = data_preparation()\n",
-    "    \n",
     "    optimizer = keras.optimizers.Adam(learning_rate=learning_rate)\n",
-    "    \n",
-    "    if opt.u is False:\n",
-    "        model = VAE(opt.u, input_shape, multiplier, latent_size)\n",
-    "    elif opt.u is True:\n",
-    "        model = UPAE(opt.u, input_shape, multiplier, latent_size)\n",
     "\n",
     "    model.build(input_shape=(None, 64, 64, 3))\n",
     "\n",
@@ -286,13 +265,15 @@
     "    \n",
     "    # Where images of each epoch will be saved\n",
     "    save_directory = 'Images/images_epochs'\n",
-    "    save_callback = SaveImageCallback(image_datasets[0], save_directory)\n",
+    "    save_callback = SaveImageCallback(image_datasets['train'], save_directory)\n",
     "\n",
     "    # plot_model(model, 'autoencoder_compress.png', show_shapes=True)\n",
     "    #training on training set.\n",
     "    history_train = model.fit(image_datasets['train'], \n",
     "                epochs=epochs, \n",
-    "                batch_size=batch_size)\n",
+    "                batch_size=batch_size,\n",
+    "                validation_split=0.15,\n",
+    "                callbacks=[save_callback])\n",
     "    "
    ]
   },
@@ -307,47 +288,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "7071dba6",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list.append() takes exactly one argument (2 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m history_valid \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mpredict(image_datasets[\u001b[39m'\u001b[39;49m\u001b[39mvalid\u001b[39;49m\u001b[39m'\u001b[39;49m], batch_size\u001b[39m=\u001b[39;49mbatch_size)\n",
-      "File \u001b[1;32md:\\GithubRepos\\MURA-Classification\\models.py:197\u001b[0m, in \u001b[0;36mVAE.predict\u001b[1;34m(self, data, batch_size)\u001b[0m\n\u001b[0;32m    195\u001b[0m     abnormal_score \u001b[39m=\u001b[39m (reconstruction\u001b[39m-\u001b[39mbatch_data) \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m \u001b[39m2\u001b[39m\n\u001b[0;32m    196\u001b[0m     abnormal_score \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mreduce_mean(abnormal_score, axis\u001b[39m=\u001b[39m(\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m))\n\u001b[1;32m--> 197\u001b[0m     predictions\u001b[39m.\u001b[39;49mappend(reconstruction, abnormal_score)\n\u001b[0;32m    199\u001b[0m \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39mconcatenate(predictions, axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: list.append() takes exactly one argument (2 given)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "history_valid = model.predict(image_datasets['valid'], batch_size=batch_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "78a2533e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'history_valid' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m history_valid\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'history_valid' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(64, 64, 3), dtype=float32, numpy=\n",
+       "array([[[0.00000000e+00, 0.00000000e+00, 1.81942768e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 2.48510246e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 2.96470337e+01],\n",
+       "        ...,\n",
+       "        [0.00000000e+00, 0.00000000e+00, 9.54594727e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 9.52634735e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 5.97324219e+01]],\n",
+       "\n",
+       "       [[0.00000000e+00, 0.00000000e+00, 2.51535339e+01],\n",
+       "        [1.77127242e-01, 0.00000000e+00, 2.86279335e+01],\n",
+       "        [0.00000000e+00, 2.68575788e-01, 2.53165588e+01],\n",
+       "        ...,\n",
+       "        [1.35485995e+00, 0.00000000e+00, 1.05796829e+02],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 9.98215637e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 9.49383392e+01]],\n",
+       "\n",
+       "       [[0.00000000e+00, 0.00000000e+00, 2.66872368e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 2.50604095e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 2.83864632e+01],\n",
+       "        ...,\n",
+       "        [0.00000000e+00, 0.00000000e+00, 1.08532104e+02],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 1.00091812e+02],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 9.48779755e+01]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[0.00000000e+00, 0.00000000e+00, 8.97077789e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 8.66113129e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 1.17109283e+02],\n",
+       "        ...,\n",
+       "        [3.48187178e-01, 0.00000000e+00, 2.78703346e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 2.47983513e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 2.71766949e+01]],\n",
+       "\n",
+       "       [[0.00000000e+00, 0.00000000e+00, 7.93536453e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 9.42806473e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 1.01826027e+02],\n",
+       "        ...,\n",
+       "        [0.00000000e+00, 0.00000000e+00, 2.84502449e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 2.58175488e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 2.32498550e+01]],\n",
+       "\n",
+       "       [[0.00000000e+00, 0.00000000e+00, 5.84963951e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 7.85682220e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 9.80121460e+01],\n",
+       "        ...,\n",
+       "        [1.07230365e-01, 0.00000000e+00, 2.53231258e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 2.36959839e+01],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 1.73847141e+01]]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "history_valid"
+    "history_valid[0][0]"
    ]
   },
   {
@@ -361,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b363b159",
    "metadata": {},
    "outputs": [],
@@ -403,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "154822a8",
    "metadata": {},
    "outputs": [],
@@ -417,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "8e7d13db",
    "metadata": {},
    "outputs": [],
@@ -426,7 +442,7 @@
     "    fig, axs = plt.subplots(1,2, figsize=(8,4))\n",
     "    axs[0].imshow(image_datasets['valid'][x])\n",
     "    axs[0].set_title('Original Image')\n",
-    "    new_image = np.floor(history_valid[x]).astype(np.uint8)\n",
+    "    new_image = np.floor(history_valid[0][x]).astype(np.uint8)\n",
     "    axs[1].imshow(new_image)\n",
     "    axs[1].set_title('Reconstructed Image')\n",
     "    plt.savefig(f'{reconstructed_images_path}/Valid_Image_{x}.png')\n",
